# BitcoinExplorer

./: .env  .eslintrc.json  LICENSE  README.md
ingestion/: Cargo.toml  urls.txt
ingestion/src/: main.rs
webapp/: .gitignore  package-lock.json  package.json
webapp/app/: page.tsx
webapp/app/api/blocks/block/: route.ts
webapp/lib/: dbConnect.ts
