[package]
name = "ingestion"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoincore-rpc = "0.18.0"  # For interacting with the Bitcoin Core node
tokio = { version = "1", features = ["full"] }  # For async runtime
tokio-postgres = "0.7"  # For PostgreSQL interaction
futures = "0.3"  # For async combinators
dotenv = "0.15.0"

reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
